Add class button, remove class reply-button

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -14,7 +14,7 @@
           <%= text_field(:reply, :body, size: 20, placeholder: "Write a message...") %>
         </div>
         <div class="small-2 columns no-padding">
-          <%= submit_tag "Reply", :class => "tiny bon-button reply-button" %>
+          <%= submit_tag "Reply", :class => "button tiny bon-button" %>
         </div>
       <% end %>
     </div>
