--- a/app/views/shared/_home_nav.html.erb
+++ b/app/views/shared/_home_nav.html.erb
@@ -18,7 +18,7 @@
       <hr class="home-nav-hr" />
       <%= link_to_unless_current "<h5 class='title'><i class='fi-price-tag'></i> Profile</h5>".html_safe, user_marketplace_path(current_user), :class => "nav-link" %>
       <hr class="home-nav-hr" />
-      <h5 class="title"><%= link_to_unless(offers_page?, "<h5 class='title'><i class='fi-burst-sale #{ 'notification' if new_offers? }'></i> Offers</h5>".html_safe, offers_path, :class => "nav-link") %></h5>
+      <h5 class="title"><%= link_to_unless(offers_page?, "<h5 class='title'>#{ new_offers_notice }<i class='fi-burst-sale'></i> Offers</h5>".html_safe, offers_path, :class => "nav-link") %></h5>
       <% if offers_page? %>
         <ul>
           <li><%= link_to_unless_current "Received", offers_path, :class => "nav-link" %></li>
@@ -26,7 +26,7 @@
         </ul>
       <% end %>
       <hr class="home-nav-hr" />
-      <h5 class="title"><%= link_to_unless(messages_page?, "<h5 class='title'><i class='fi-mail #{ 'notification' if new_messages? }'></i> Messages</h5>".html_safe, messages_path, :class => "nav-link") %></h5>
+      <h5 class="title"><%= link_to_unless(messages_page?, "<h5 class='title'>#{ new_messages_notice }<i class='fi-mail'></i> Messages</h5>".html_safe, messages_path, :class => "nav-link") %></h5>
       <% if messages_page? %>
         <ul id="mailbox-links">
           <li><%= link_to_unless_current "Inbox", messages_path, :class => "nav-link" %></li>
