--- a/app/views/application/_mobile_home_links.html.erb
+++ b/app/views/application/_mobile_home_links.html.erb
@@ -5,14 +5,14 @@
   <%= link_to "<i class='fi-price-tag'></i> Profile".html_safe, user_marketplace_path(current_user) %>
 </li>
 <li class="hide-for-medium-up has-dropdown">
-  <%= link_to "<i class='fi-burst-sale #{'notification' if new_offers?}'></i> Offers".html_safe, offers_path %>
+  <%= link_to "#{ new_offers_notice }<i class='fi-burst-sale'></i> Offers".html_safe, offers_path %>
   <ul class="dropdown">
     <li><%= link_to "Received", offers_path %></li>
     <li><%= link_to "Sent", sent_offers_path %></li>
   </ul>
 </li>
 <li class="hide-for-medium-up has-dropdown">
-  <%= link_to "<i class='fi-mail #{'notification' if new_messages?}'></i> Messages".html_safe, messages_path %>
+  <%= link_to "#{ new_messages_notice }<i class='fi-mail'></i> Messages".html_safe, messages_path %>
   <ul class="dropdown">
     <li><%= link_to "Inbox", messages_path %></li>
     <li><%= link_to "Sent", sent_path %></li>
