--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -4,7 +4,7 @@
     <li class="name">
       <h1><%= link_to "bonsai list", root_path %></h1>
     </li>
-    <li class="toggle-topbar menu-icon"><a href="#"><span class="<%= 'notification' if new_notification? %>">Menu</span></a></li>
+    <li class="toggle-topbar menu-icon"><%= new_notification_notice(mobile: true) %><a href="#" class="top-bar-menu-icon"><span>Menu</span></a></li>
   </ul>
   <section class="top-bar-section">
     <ul class="right">
