--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -3,6 +3,16 @@
   font-size: large;
 }
 
+.new-message-notice {
+  background-color: #009900;
+  border-radius: 2px;
+  border: 1px solid #737373;
+  box-shadow: 1px 1px 1px gray;
+  color: white;
+  font-style: italic;
+  text-align: center;
+}
+
 .trash-link {
   @media only screen and (min-width: 40.063em) and (max-width: 64em) {
     margin-left: 20px;
