Change box shadow color for push notifications

--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -28,7 +28,7 @@ p {
 
 .noti-bubble {
   background-color: #009900;
-  box-shadow: 1px 1px 1px gray;
+  box-shadow: 1px 1px 1px #737373;
   color: white;
   font-size: 0.55em;
   font-weight: bold;
