--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -3,14 +3,10 @@
   font-size: large;
 }
 
-.new-message-notice {
-  background-color: #009900;
-  border-radius: 2px;
-  border: 1px solid #737373;
-  box-shadow: 1px 1px 1px gray;
-  color: white;
-  font-style: italic;
-  text-align: center;
+.fi-burst-new {
+  color: #009900;
+  font-size: 40px;
+  margin-left: 8px;
 }
 
 .trash-link {
