--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -220,38 +220,8 @@ a.nav-link li:hover {
   padding: 15px 0 0 0;
 }
 
-#notice {
-  color: green;
-}
-
-#alert {
+.error-message {
   color: red;
-}
-
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-}
-
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px;
-    margin-bottom: 0px;
-    background-color: #c00;
-    color: #fff;
-  }
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
+  font-style: italic;
+  font-size: 12px;
 }
