--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,20 +3,20 @@
   <div class="small-12 medium-5 columns">
     <h2>Sign up</h2>
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {multipart: true}) do |f| %>
-      <%= devise_error_messages! %>
+      <%#= devise_error_messages! %>
       <div class="row">
         <div class="smaill-12 medium-6 columns">
-          <%= f.label :firstname, "First name" %>
-          <%= f.text_field :firstname, :autofocus => true %>
+          <%= f.label :first_name, "First name #{validation_error_message(resource, :first_name)}".html_safe %>
+          <%= f.text_field :first_name, :autofocus => true %>
         </div>
         <div class="smaill-12 medium-6 columns">
-          <%= f.label :lastname, "Last name" %>
-          <%= f.text_field :lastname %>
+          <%= f.label :last_name, "Last name #{validation_error_message(resource, :last_name)}".html_safe %>
+          <%= f.text_field :last_name %>
         </div>
       </div>
       <div class="row">
         <div class="smaill-12 columns">
-          <%= f.label :email, "Email address" %>
+          <%= f.label :email, "Email address #{validation_error_message(resource, :email)}".html_safe %>
           <%= f.email_field :email %>
         </div>
       </div>
@@ -30,31 +30,31 @@
       <%= f.fields_for :address, @user.address do |addr| %>
         <p>Address</p>
         <div class="row">
-          <div class="small-6 columns">
-            <%= addr.label :city %>
+          <div class="small-12 medium-6 columns">
+            <%= addr.label :city, "City  #{validation_error_message(resource.address, :city)}".html_safe %>
             <%= addr.text_field :city, value: @user.address.city %>
           </div>
-          <div class="small-6 columns">
-            <%= addr.label :postcode %>
-            <%= addr.text_field :postcode, value: @user.address.postcode %>
-          </div>
-          <div class="small-6 columns">
-            <%= addr.label :state %>
+          <div class="small-12 medium-6 columns">
+            <%= addr.label :state, "State #{validation_error_message(resource.address, :state)}".html_safe %>
             <%= addr.text_field :state, value: @user.address.state %>
           </div>
-          <div class="small-6 columns">
-            <%= addr.label :country %>
+          <div class="small-12 medium-6 columns">
+            <%= addr.label :postcode, "Postal code #{validation_error_message(resource.address, :postcode)}".html_safe %>
+            <%= addr.text_field :postcode, value: @user.address.postcode %>
+          </div>
+          <div class="small-12 medium-6 columns">
+            <%= addr.label :country, "Country #{validation_error_message(resource.address, :country)}".html_safe %>
             <%= addr.text_field :country, value: @user.address.country %>
           </div>
         </div>
       <% end %>
       <div class="row">
         <div class="small-12 columns">
-          <%= f.label :password %>
+          <%= f.label :password, "Password #{validation_error_message(resource.address, :password)}".html_safe %>
           <%= f.password_field :password %>
         </div>
         <div class="small-12 columns">
-          <%= f.label :password_confirmation %>
+          <%= f.label :password_confirmation, "Password confirmation #{validation_error_message(resource.address, :password_confirmation)}".html_safe %>
           <%= f.password_field :password_confirmation %>
         </div>
       </div>
