--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="small-12 medium-8 large-6 columns">
+      <div class="small-12 medium-8 columns">
         <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :multipart => true }) do |f| %>
 
           <h5>Basic info</h5>
@@ -41,17 +41,16 @@
           <%= f.fields_for :address, @user.address do |addr| %>
             <h5>Address</h5>
             <div class="row">
-              <div class="small-12 medium-6 columns"><%= addr.label :city, "City  #{validation_error_message(resource.address, :city)}".html_safe %>
+              <div class="small-12 columns"><%= addr.label :city, "City  #{validation_error_message(resource.address, :city)}".html_safe %>
               <%= addr.text_field :city, value: @user.address.city %></div>
 
-              <div class="small-12 medium-6 columns left"><%= addr.label :state, "State #{validation_error_message(resource.address, :state)}".html_safe %>
+              <div class="small-12 columns left"><%= addr.label :state, "State #{validation_error_message(resource.address, :state)}".html_safe %>
               <%= addr.text_field :state, value: @user.address.state %></div>
-            </div>
-            <div class="row">
-              <div class="small-12 medium-6 columns"><%= addr.label :postcode, "Postal code #{validation_error_message(resource.address, :postcode)}".html_safe %>
+
+              <div class="small-12 columns"><%= addr.label :postcode, "Postal code #{validation_error_message(resource.address, :postcode)}".html_safe %>
               <%= addr.text_field :postcode, value: @user.address.postcode %></div>
 
-              <div class="small-12 medium-6 columns left"><%= addr.label :country, "Country #{validation_error_message(resource.address, :country)}".html_safe %>
+              <div class="small-12 columns left"><%= addr.label :country, "Country #{validation_error_message(resource.address, :country)}".html_safe %>
               <%= addr.text_field :country, value: @user.address.country %></div>
             </div>
           <% end %>
