--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,11 +5,11 @@
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {multipart: true}) do |f| %>
       <%#= devise_error_messages! %>
       <div class="row">
-        <div class="smaill-12 medium-6 columns">
+        <div class="smaill-12 columns">
           <%= f.label :first_name, "First name #{validation_error_message(resource, :first_name)}".html_safe %>
           <%= f.text_field :first_name, :autofocus => true %>
         </div>
-        <div class="smaill-12 medium-6 columns">
+        <div class="smaill-12 columns">
           <%= f.label :last_name, "Last name #{validation_error_message(resource, :last_name)}".html_safe %>
           <%= f.text_field :last_name %>
         </div>
@@ -21,28 +21,28 @@
         </div>
       </div>
       <div class="row">
-        <div class="small-12 medium-6 columns">
+        <div class="small-12 columns">
           <%= f.label :avatar, "Profile picture"  %>
           <%= f.file_field :avatar %>
           <%= f.hidden_field :avatar_cache %>
         </div>
       </div>
       <%= f.fields_for :address, @user.address do |addr| %>
-        <p>Address</p>
+        <p class="inline-label">Address</p><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Please enter your address.<br/><br/> We use this information to make it easier to find listings near you."><i class="fi-info"></i></span>
         <div class="row">
-          <div class="small-12 medium-6 columns">
+          <div class="small-12 columns">
             <%= addr.label :city, "City  #{validation_error_message(resource.address, :city)}".html_safe %>
             <%= addr.text_field :city, value: @user.address.city %>
           </div>
-          <div class="small-12 medium-6 columns">
+          <div class="small-12 columns">
             <%= addr.label :state, "State #{validation_error_message(resource.address, :state)}".html_safe %>
             <%= addr.text_field :state, value: @user.address.state %>
           </div>
-          <div class="small-12 medium-6 columns">
+          <div class="small-12 columns">
             <%= addr.label :postcode, "Postal code #{validation_error_message(resource.address, :postcode)}".html_safe %>
             <%= addr.text_field :postcode, value: @user.address.postcode %>
           </div>
-          <div class="small-12 medium-6 columns">
+          <div class="small-12 columns">
             <%= addr.label :country, "Country #{validation_error_message(resource.address, :country)}".html_safe %>
             <%= addr.text_field :country, value: @user.address.country %>
           </div>
