Add styles for flash messages #notice, and #alert

--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -7,6 +7,14 @@ p {
   margin-top: 7px;
 }
 
+#alert {
+  color: red;
+}
+
+#notice {
+  color: green;
+}
+
 .bon-button {
   background-color: #e1e1e1;
   border: 1px solid #b6b6b6;
