--- a/app/views/application/_topbar.html.erb
+++ b/app/views/application/_topbar.html.erb
@@ -2,7 +2,7 @@
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><%= link_to "bonsai list", root_path %></h1>
+      <h1><%= link_to "bonsai list", title_link %></h1>
     </li>
     <li class="toggle-topbar menu-icon"><%= new_notification_notice(mobile: true) %><a href="#" class="top-bar-menu-icon"><span>Menu</span></a></li>
   </ul>
