--- a/app/views/listings/confirm_remove.html.erb
+++ b/app/views/listings/confirm_remove.html.erb
@@ -1,8 +1,19 @@
 <div class="row">
   <div class="small-12 columns">
+    <h2>Sold something?</h2>
+    <h5 class="subtitle">Consider donating a buck or two to bonsai list.</h5>
+    <p>Safe and secure payments through PayPal</p>
+    <%= notice %>
+    <div class="row">
+      <div class="small-6 columns">
+        <%= form_tag donations_path(@listing) do %>
+          <%= label_tag :amount %>
+          <%= text_field_tag :amount %>
+          <%= submit_tag "Make a donation!" %>
+        <% end %>
+      </div>
+    </div>
     <p><%= link_to 'Remove', remove_listing_path(@listing), :class => " button bon-button tiny", method: :patch, data: { confirm: 'Are you sure you want to remove this listing?' } %></p>
     <%= link_to :back %>
   </div>
 </div>
-
-
