--- a/app/views/marketplace/show.html.erb
+++ b/app/views/marketplace/show.html.erb
@@ -1,6 +1,8 @@
 <% page_title(@user.full_name) %>
 <div class="row">
   <%= render partial: "profile_banner" %>
+</div>
+<div class="row">
   <div id="marketplace-nav" class="medium-4 large-3 columns hide-for-small">
     <%= render partial: "shared/marketplace_nav" %>
     <% if my_profile?(@user) %>
