--- a/app/views/listings/confirm_remove.html.erb
+++ b/app/views/listings/confirm_remove.html.erb
@@ -1,19 +1,58 @@
+<% page_title "Create new listing" %>
 <div class="row">
-  <div class="small-12 columns">
-    <h2>Sold something?</h2>
-    <h5 class="subtitle">Consider donating a buck or two to bonsai list.</h5>
-    <p>Safe and secure payments through PayPal</p>
-    <%= notice %>
+  <div class="small-12 medium-6 columns">
+    <h2>Made a sale?</h2>
+    <h5 class="subtitle centered-text">Consider donating a buck or two to bonsai list.</h5>
+    <%= form_tag donations_path(@listing) do %>
     <div class="row">
-      <div class="small-6 columns">
-        <%= form_tag donations_path(@listing) do %>
-          <%= label_tag :amount %>
-          <%= text_field_tag :amount %>
-          <%= submit_tag "Make a donation!" %>
-        <% end %>
+      <div class="small-12 columns">
+       <%= label_tag :amount, "Amount", :class => 'inline-label no-margin' %> <span class="amount-subtitle">- Safe and secure payments through PayPal</span> <span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="If you want to donate, we'll redirect you to PayPal, and they'll handle all the credit card processing."><i class="fi-info"></i></span><br />
       </div>
     </div>
-    <p><%= link_to 'Remove', remove_listing_path(@listing), :class => " button bon-button tiny", method: :patch, data: { confirm: 'Are you sure you want to remove this listing?' } %></p>
-    <%= link_to :back %>
+    <div class="row collapse">
+      <div class="small-1 columns">
+        <span class="prefix">$</span>
+      </div>
+      <div class="small-11 columns">
+        <%= text_field_tag :amount, nil, value: 1 %>
+      </div>
+    </div>
+    <div class="small-12 columns">
+      <%= submit_tag "Make a donation!", :class => "button small product-button expand" %>
+    </div>
+      <hr />
+    <% end %>
+    <div class="row">
+      <div class="small-12 columns">
+        <h3>Can't afford to donate?</h3>
+        <p>No problem.</p>
+        <p class="centered-text"><em>Your donations keep bonsai list alive. Think about chipping in a few bucks next time.</em></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-12 columns">
+        <p class="remove-listing-margin">Remove this listing?</p>
+      </div>
+      <div class="small-12 columns">
+        <div class="small-3 medium-2 columns listing-thumb">
+          <% if @listing.pics.empty? %>
+            <%= link_to image_tag("http://placehold.it/50x50&text=[img]", :class => "th"), listing_path(@listing) %>
+          <% else %>
+            <%= link_to image_tag(@listing.thumb_image, :class => "th"), listing_path(@listing) %>
+          <% end %>
+        </div>
+        <div class="small-9 medium-10 columns left no-padding home-listing-info">
+          <div class="small-12 columns">
+            <p class="message-name">
+              <%= link_to truncate(@listing.headline, length: 30), listing_path(@listing) %>
+            </p>
+            <p>Category: <%= @listing.category.name %></p>
+          </div>
+        </div>
+      </div>
+      <div class="small-12 columns">
+        <p><%= link_to 'Remove', remove_listing_path(@listing), :class => " button bon-button small expand", method: :patch, data: { confirm: 'Are you sure you want to remove this listing?' } %></p>
+      </div>
+    </div>
   </div>
 </div>
