--- a/app/assets/stylesheets/_shared_styles.scss
+++ b/app/assets/stylesheets/_shared_styles.scss
@@ -1,3 +1,12 @@
+.static-p {
+  margin-left: 10px;
+}
+
+.beta {
+  color: white;
+  font-style: italic;
+}
+
 li {
   list-style: none;
 }
@@ -53,7 +62,6 @@ div.noti-bubble {
   right: 0;
   top: 0;
   text-align: center;
-
 }
 
 div.noti-container {
@@ -84,10 +92,6 @@ a.home-link {
 .listing-thumb {
   max-width: 80px;
   padding-right: 0;
-}
-
-.marketplace-nav-hr {
-  margin: 0;
 }
 
 .message-block {
