--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,6 +5,7 @@
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", contact_path %></li>
         <li><%= link_to "FAQ", faq_path %></li>
+        <li><%= link_to "Terms", terms_path %></li>
       </ul>
     </div>
   </div>
