Add beta to hero

--- a/app/views/application/_hero.html.erb
+++ b/app/views/application/_hero.html.erb
@@ -1,7 +1,7 @@
 <div id="hero">
   <div class="row">
     <div class="small-12 columns hero-content">
-      <h1>bonsai list</h1>
+      <h1 class="inline-label">bonsai list</h1><p class="inline-label beta">beta</p>
     </div>
   </div>
 </div>
