--- a/app/views/shared/_marketplace_nav.html.erb
+++ b/app/views/shared/_marketplace_nav.html.erb
@@ -6,7 +6,7 @@
     <%= link_to "Categories - <span class='marketplace-show-all'>Show All</span>".html_safe, marketplace_or_listings %>
   <% end %>
   </label>
-  <hr class="marketplace-nav-hr" />
+  <hr class="no-margin" />
   <ul class="marketplace-nav-ul">
     <%= render partial: @categories %>
   </ul>
