--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,6 +1,24 @@
 <% page_title "FAQ" %>
 <div class="row">
-  <div class="small-12 columns">
+  <div class="small-12 medium-8 columns">
     <h1>FAQ</h1>
+    <h3>What is bonsai list?</h3>
+    <p class="static-p">It's a bonsai marketplace, where people can put bonsai stuff they have up for sale. Kinda like a fancy classified listing site.</p><br />
+    <h3>Does it cost anything to sign up?</h3>
+    <p class="static-p">Nope. It's free.</p><br />
+    <h3>Does it cost anything to post something for sale?</h3>
+    <p class="static-p">Nope. It's free.</p><br />
+    <h3>What about advertisements? If everything is free there must be a bunch of ads?</h3>
+    <p class="static-p">Nope. No ads.</p><br />
+    <h3>If there's no ads, and it doesn't cost anything, does this site make any money?</h3>
+    <p class="static-p">That all depends on the loyal bonsai list members. With bonsai list, we're trying to make it a "community supported website" (akin to community supported radio). Instead of having ads (which are annoying) or fees (which no one likes), we're asking that if you like using the site, and you sell something, think about donating a dollar or two to bonsai list. This approach probably won't make us millionaires, but it might help us afford some new trees! And lets not forget all the server fees and what have you.</p><br />
+    <h3>Do I have to sign up to post something for sale?</h3>
+    <p class="static-p">Yes.</p><br />
+    <h3>I want to buy something, how do I do that?</h3>
+    <p class="static-p">Sign up for an account. Sign in to your account. Send the seller a message. Negotiate a price, and when and where you want to meet up to make the sale.</p><br />
+    <h3>Does bonsai list handle the payment between buyer and seller?</h3>
+    <p class="static-p">Nope. Like I mentioned earlier, bonsai list is just a fancy classified listing site.</p><br />
+    <h3>I think bonsai list is awesome! I want to tell all my bonsai friends about it!</h3>
+    <p class="static-p no-listing-message-margin">That wasn't actually a question...but I like your enthusiasm! Please tell your friends, and neighbors, and anyone else you think might want to buy and sell some bonsai.</p>
   </div>
 </div>
