--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,7 +26,7 @@
     <%= link_to "<i class='fi-shopping-cart'></i> Marketplace".html_safe, marketplace_path, :class => "button radius expand" %>
   </div>
   <div class="small-12 medium-5 medium-pull-1 large-3 columns large-pull-3 centered-text">
-    <p>Register for a new account</p>
+    <p>Sign up for a free account</p>
     <%= link_to "<i class='fi-checkbox'></i> Sign up!".html_safe, new_user_registration_path, :class => "button radius expand" %>
   </div>
 </div>
