--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,11 @@
 <% page_title "About" %>
 <div class="row">
-  <div class="small-12 columns">
+  <div class="small-12 medium-8 columns">
     <h1>About</h1>
+    <h3>The story behind bonsai list...</h3>
+    <p class="static-p">Have you ever thought, "I wish there was a website where I could post all that bonsai stuff I want to get rid of, a website made by and for bonsai enthusiasts, where I could meet and connect with other bonsai enthusiasts near me and around the world..."?</p><br />
+    <p class="static-p">For those of you who have asked that question, I present to you an answer...bonsai list!</p><br />
+    <p class="static-p">I came up with the idea for bonsai list after realizing that I have stuff bonsai stuff that I'd like to sell off, and also, that I have some trees that I'm not actively looking to sell, but might part with if offered the right price. Such is the logic behind bonsai list.</p><br />
+    <p class="static-p">This site is built and maintained by one person, namely me (hello!). Feel free to send me an email: adam@bonsai-list.com.</p><br />
   </div>
 </div>
