--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% page_title "Sign Up" %>
 <div class="row">
-  <div class="small-12 medium-5 columns">
-    <h2>Sign up</h2>
+  <div class="small-12 medium-6 large-5 columns">
+    <h2>Sign up. It's free!</h2>
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {multipart: true}) do |f| %>
       <%#= devise_error_messages! %>
       <div class="row">
@@ -58,6 +58,7 @@
           <%= f.password_field :password_confirmation %>
         </div>
       </div>
+      <p>By signing up, you agree to the<br /> <%= link_to "Terms and Conditions of bonsai list", terms_path %></p>
       <div><%= f.submit "Sign up", :class => "button tiny" %></div>
     <% end %>
   </div>
