--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -18,7 +18,14 @@
       <%= f.label "Take offers" %><br />
     </div>
     <%= f.label :price, "Price #{validation_error_message(@listing, :price)}".html_safe, :class => "inline-label" %><span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="Enter a price, even if you selected 'Take offers'.<br /><br />We won't display the price for listings you're taking offers on, but we'll use it to help search and sort listings."><i class="fi-info"></i></span>
-    <%= f.text_field :price %>
+    <div class="row collapse">
+      <div class="small-1 columns">
+        <span class="prefix">$</span>
+      </div>
+      <div class="small-11 columns">
+        <%= text_field_tag :price %>
+      </div>
+    </div>
     <hr />
     <%= f.label "Category" %>
     <%= f.collection_radio_buttons :category_id, @categories, :id, :name, { checked: @categories.first.id }, { id: 'categories_radio' } do |b| %>
