Fix price field

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -23,7 +23,7 @@
         <span class="prefix">$</span>
       </div>
       <div class="small-11 columns">
-        <%= text_field_tag :price %>
+        <%= f.text_field :price %>
       </div>
     </div>
     <hr />
