--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="small-12 columns preview-pic-row">
         <ul class="clearing-thumbs" data-clearing>
-        <% @listing.pics.reverse.each do |pic| %>
+        <% @listing.pics.each do |pic| %>
           <li>
             <%= link_to image_tag(pic.image.thumb, :class => "listing-pic-thumb"), image_path(pic.image.main), :class => "th" %>
           </li>
