Edit tooltip message

--- a/app/views/listings/confirm_remove.html.erb
+++ b/app/views/listings/confirm_remove.html.erb
@@ -6,7 +6,7 @@
     <%= form_tag donations_path(@listing) do %>
     <div class="row">
       <div class="small-12 columns">
-       <%= label_tag :amount, "Amount", :class => 'inline-label no-margin' %> <span class="amount-subtitle">- Safe and secure payments through PayPal</span> <span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="If you want to donate, we'll redirect you to PayPal, and they'll handle all the credit card processing."><i class="fi-info"></i></span><br />
+       <%= label_tag :amount, "Amount", :class => 'inline-label no-margin' %> <span class="amount-subtitle">- Safe and secure payments through PayPal</span> <span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="If you want to donate, we'll redirect you to PayPal, and they'll handle the credit card processing."><i class="fi-info"></i></span><br />
       </div>
     </div>
     <div class="row collapse">
