--- a/app/views/listings/confirm_remove.html.erb
+++ b/app/views/listings/confirm_remove.html.erb
@@ -1,4 +1,4 @@
-<% page_title "Create new listing" %>
+<% page_title "Remove listing" %>
 <div class="row">
   <div class="small-12 medium-6 columns">
     <h2>Made a sale?</h2>
