--- a/app/views/welcome_mailer/new_account_email.html.erb
+++ b/app/views/welcome_mailer/new_account_email.html.erb
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-  <h1>Hi <%= @user.full_name %>,</h1>
+  <h1>Hi <%= @user.first_name %>,</h1>
   <p>Thanks for signing up for bonsai list!</p>
   <p>The site is still pretty new, so please let us know if you have any problems with the site, and we'll get on fixing them right away!</p>
   <p>Report any issues to support@bonsai-list.com</p>
