--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -48,7 +48,7 @@ $(function(){
         success: function(){
           console.log("Dynamic geolocation set OK!");
           $.cookie('location', 'set');
-          var url = window.location.pathname + '/marketplace_ajax_sort'
+          var url = window.location.pathname + '/marketplace_ajax_sort';
           $.ajax({
             url: url,
             type: 'GET',
