--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -53,7 +53,7 @@ $(function(){
             '</div>' +
           '</div>');
         $(document).foundation('tooltip', 'reflow');
-      });
+      }, { timeout: 2000 });
     }
   };
 
