--- a/app/assets/javascripts/marketplace.js.erb
+++ b/app/assets/javascripts/marketplace.js.erb
@@ -32,28 +32,9 @@ $(function(){
   $('#marketplace-search').on('keyup', searchFliterSort);
 
   function getLocation() {
-    console.log("getting");
     if (navigator.geolocation) {
       $("#listings").empty().append('<p class="centered-text">Please share your location</p><%= image_tag("Pageloading.gif", :class => "centered-image") %>');
-      navigator.geolocation.getCurrentPosition(showPosition, function() {
-        $("#listings").empty().append('<div class="row">' +
-            '<div class="small-6 large-4 columns">' +
-              '<form id="zipform">' +
-                '<label class="inline-label">Please enter your zip code:</label>' +
-                '<span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="bonsai list needs to know your location, don\'t worry, we don\'t use it for anything nefarious."><i class="fi-info"></i></span>' +
-                '<div class="row collapse">' +
-                  '<div class="small-8 columns">' +
-                    '<input type="text" id="zipcode" name="zipcode">' +
-                  '</div>' +
-                  '<div class="small-4 columns">' +
-                    '<input type="submit" class="button tiny postfix">' +
-                  '</div>' +
-                '</div>' +
-              '</form>' +
-            '</div>' +
-          '</div>');
-        $(document).foundation('tooltip', 'reflow');
-      }, { timeout: 2000 });
+      navigator.geolocation.getCurrentPosition(showPosition, geolocationNotAllowed);
     }
   };
 
@@ -98,6 +79,26 @@ $(function(){
       showPosition(position);
     }
   };
+
+  function geolocationNotAllowed () {
+    $("#listings").empty().append('<div class="row">' +
+        '<div class="small-6 large-4 columns">' +
+          '<form id="zipform">' +
+            '<label class="inline-label">Please enter your zip code:</label>' +
+            '<span data-tooltip aria-haspopup="true" class="has-tip tip-right" title="bonsai list needs to know your location, don\'t worry, we don\'t use it for anything nefarious."><i class="fi-info"></i></span>' +
+            '<div class="row collapse">' +
+              '<div class="small-8 columns">' +
+                '<input type="text" id="zipcode" name="zipcode">' +
+              '</div>' +
+              '<div class="small-4 columns">' +
+                '<input type="submit" class="button tiny postfix" value="Submit">' +
+              '</div>' +
+            '</div>' +
+          '</form>' +
+        '</div>' +
+      '</div>');
+    $(document).foundation('tooltip', 'reflow');
+  }
 
   function setCoordinates () {
     var zipcode = $('#zipcode').val();
